tests/ui/implied-bounds/reject-collapsing-tuples.stderr
error[E0308]: mismatched types
  --> $DIR/reject-collapsing-tuples.rs:7:57
   |
LL |     let _f: for<'x> fn((&'x (),), &'x u32) -> &'x u32 = foo;
   |             -----------------------------------------   ^^^ types differ
   |             |
   |             expected due to this
   |
   = note: expected fn pointer `for<'x> fn((&'x (),), &'x _) -> &'x _`
                 found fn item `for<'a, 'b> fn((&'a &'b (),), &'b _) -> &'a _ {foo}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
